--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -34,7 +34,7 @@
         </tr>
     </#list>
     </tbody>
-    <button type="button" class="btn btn-primary btn-lg btn-block" onclick="window.location.href='../'">cd ..</button>
+    <button type="button" class="btn btn-success btn-lg btn-block" onclick="window.location.href='../'">cd ..</button>
 </table>
 </body>
 
