--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Files</title>
     <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/superhero/bootstrap.min.css" rel="stylesheet" integrity="sha384-R/oa7KS0iDoHwdh4Gyl3/fU7pgvSCt7oyuQ79pkw+e+bMWD9dzJJa+Zqd+XJS0AD" crossorigin="anonymous">
+
     <style>
         table{
             text-align: center;
@@ -13,6 +14,7 @@
 </head>
 
 <body>
+
 <table class="table table-hover">
     <thead>
     <tr>
@@ -38,7 +40,12 @@
     </#list>
     </tbody>
     <button type="button" class="btn btn-success btn-lg btn-block" onclick="window.location.href='../'">cd ..</button>
+
+
 </table>
+
+<iframe src="fileUpload.html" style="width: 100%" height="300px"></iframe>
+
 </body>
 
 </html>
