--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -44,7 +44,7 @@
 
 </table>
 
-<iframe src="fileUpload.html" style="width: 100%" height="300px"></iframe>
+<iframe src="fileUpload.html" style="width: 100%;margin-top: 100px" height="200px"></iframe>
 
 </body>
 
