--- a/src/main/resources/template/fileUpload.html
+++ b/src/main/resources/template/fileUpload.html
@@ -30,8 +30,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.0/dropzone.js"></script>
 <script>
     Dropzone.options.upload = {
-        paramName: "file", // The name that will be used to transfer the file
-        maxFilesize: 100000// MB
+        maxFilesize: 100000,// MB
+        timeout: 1000000
     };
 
 </script>
